# TranslaTHOR

./: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: inspection.py  regions.py  schema.py
backend/app/services/: coordinate_utils.py  deepseek_ocr_pipeline.py  job_queue.py  job_store.py  layout_detectors.py  markdown_builder.py  ocr_region_service.py  ocr_text_compiler.py  pdf_inspector.py  pipeline.py  profiler.py  reconstructor.py  region_store.py  renderer.py  translation_debug.py  translation_subprocess.py  translation_worker.py  translator_mlx.py
frontend/: app.js  index.html  styles.css
scripts/: benchmark_pipeline.sh  compare_ocr_markdown.py  debug_region_ocr.py  deepseek_ocr_worker.py  run_dev.sh  setup_deepseek_ocr_env.sh  setup_local_runtime.sh
tests/: test_coordinate_utils.py  test_deepseek_ocr_cache_reuse.py  test_deepseek_ocr_config_wiring.py  test_deepseek_ocr_progress_without_cancel.py  test_deepseek_ocr_worker.py  test_frontend_ocr_region_ui_static.py  test_heading_translation_context.py  test_job_attempt_naming.py  test_layout_detector_order.py  test_markdown_tables.py  test_ocr_region_cropping.py  test_ocr_rerun_duplication.py  test_ocr_result_summary.py  test_ocr_text_compiler.py  test_profiler.py  test_qwen_prompt.py  test_region_persistence_workflow.py  test_region_serialization.py  test_selected_ocr_progress.py  test_selected_region_continuous_document.py  test_stop_and_cleanup_jobs.py  test_translation_debug_report.py  test_translation_model_config.py  test_translator_chunking.py
